--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
                         <a class="nav-link active" href="#" tabindex="-1" aria-disabled="true">Contact Us</a>
                       </li>
                       <ul class ="navbar-nav ml-auto">
+                        <!--Add to cart button from bootstrap-->
                         <button type="button" class="btn btn-primary btn-sm">Your Cart (0)</button>
                       </ul>
                     </ul>
