--- a/index.html
+++ b/index.html
@@ -107,7 +107,8 @@
         <hr class = "solid">
         <!--List of product details-->
         <h3>Product Details</h3>
-        <ul class = "product-details">
+        <div class ="custom-list">
+        <ul>
             <li>Breathable mesh upper in a running shoe style with a round toe</li>
             <li>Flywire lace up cables for a secure fit</li>
             <li>Padded collar and tongue for added comfort</li>
@@ -117,6 +118,7 @@
             <li>Phylon midsole is lightweight while still offering support</li>
             <li>Synthetic traction outsole with waffle pistons for enhanced support and an easy stride</li>
         </ul>
+      </div>
         <br>
         <!--Suggestion Section-->
         <h4>Other shoes you might like</h4>
